MCR-3349 add support for JUnit 5.x (#2440)